# project-robotics

./: .gitignore  .gitmodules
ActionMessage/: Action.cpp  Action.cpp.template  Action.h  Action.h.template  ActionDecoder.cpp.template  ActionDecoder.h.template  ActionEncoder.cpp.template  ActionEncoder.h  ActionEncoder.h.template  FailedAction.cpp  FailedAction.h  FailedActionDecoder.cpp  FailedActionDecoder.h  FailedActionEncoder.cpp  FailedActionEncoder.h  HomeAction.cpp  HomeAction.h  HomeActionDecoder.cpp  HomeActionDecoder.h  HomeActionEncoder.cpp  HomeActionEncoder.h  KillAction.cpp  KillAction.h  KillActionDecoder.cpp  KillActionDecoder.h  KillActionEncoder.cpp  KillActionEncoder.h  MoveAction.cpp  MoveAction.h  MoveActionDecoder.cpp  MoveActionDecoder.h  MoveActionEncoder.cpp  MoveActionEncoder.h  NoAction.cpp  NoAction.h  NoActionDecoder.cpp  NoActionDecoder.h  NoActionEncoder.cpp  NoActionEncoder.h  PowerDownAction.cpp  (+18 more)
ActionMessage/ActionFactory/: ActionFactory.cpp  ActionFactory.h
ActionMessageBackup/: Action.cpp  Action.cpp.template  Action.h  Action.h.template  ActionDecoder.cpp.template  ActionDecoder.h.template  ActionEncoder.cpp  FailedAction.cpp  FailedAction.h  FailedActionDecoder.cpp  FailedActionDecoder.h  FailedActionEncoder.cpp  FailedActionEncoder.h  HomeAction.cpp  HomeAction.h  HomeActionDecoder.cpp  HomeActionDecoder.h  HomeActionEncoder.cpp  HomeActionEncoder.h  KillAction.cpp  KillAction.h  KillActionDecoder.cpp  KillActionDecoder.h  KillActionEncoder.cpp  KillActionEncoder.h  MoveAction.cpp  MoveAction.h  MoveActionDecoder.cpp  MoveActionDecoder.h  MoveActionEncoder.cpp  MoveActionEncoder.h  NoAction.cpp  NoAction.h  NoActionDecoder.cpp  NoActionDecoder.h  NoActionEncoder.cpp  NoActionEncoder.h  PowerDownAction.cpp  PowerDownAction.h  PowerDownActionDecoder.cpp  (+16 more)
ActionMessageBackup/ActionFactory/: ActionFactory.cpp  ActionFactory.h
Arduino/RoboticArm/: BoardOptions.cmake  CMakeLists.txt  RemoteInterface.cpp  RemoteInterface.h  RoboticArm.cpp  RoboticArm.h  SerialLogger.cpp  SerialLogger.h  build.sh  debug.sh  install.sh  main.cpp
Arduino/RoboticArmC/: CMakeLists.txt  build.sh
Config/: Config.cpp  Config.h  Value.cpp  Value.h
ControlInterface/: CommandLineInterface.cpp  CommandLineInterface.h  Device.h
Controller/: CommandLineInterface.cpp  CommandLineInterface.h  RemoteInterface.cpp  RemoteInterface.h  config.txt  main.cpp
Controller/BuildFiles/: CMakeLists.txt  build.sh  debug.sh
Network/: ServerTcp.cpp  ServerTcp.h  Socket.cpp  Socket.h  SocketSerial.cpp  SocketSerial.h  SocketSerialLogger.cpp  SocketSerialLogger.h  SocketTcp.cpp  SocketTcp.h
Pathing/: Path.cpp  Path.h  Point.cpp  Point.h  StraightPath.cpp  StraightPath.h
Remote/: RemoteController.cpp  RemoteController.h  RemoteInterface.cpp  RemoteInterface.h
Simulator/: RemoteController.cpp  RemoteController.h  Segment.cpp  Segment.h  SimulatorArm.cpp  SimulatorArm.h  SimulatorController.cpp  SimulatorController.h  SimulatorMotor.cpp  SimulatorMotor.h  config.txt  main.cpp
Simulator/BuildFiles/: CMakeLists.txt  build.sh
Utils/: Logger.cpp  Logger.h  LoggerDefines.h  MessageQueue.h  Queue.h  SafeQueue.h  Semaphore.cpp  Semaphore.h  StringUtils.cpp  StringUtils.h  TrigEquations.cpp  TrigEquations.h  memory.h  shared_ptr.h  unique_ptr.h  vector.h
scripts/: actionClassesGenerate.py  actionDecoderGenerate.py  actionEncoderGenerate.py  actionsGenerate.py  buildAll.sh  vendorCodeBuild.sh
